service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-test
spec:
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    app: test
