traefik-ingress.yml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: ingress-resource
  namespace: kube-system
spec:
  rules:
    - host: myapp.com
      http:
        paths:
          - path:
            backend:
              serviceName: my-test
              servicePort: 5000
